added mobile layout for slider section

--- a/index.html
+++ b/index.html
@@ -216,7 +216,143 @@
     </div>
   </header>
 
+  <section class="banner-section page-section">
+    <div class="container">
+      <div class="banner-section__inner">
+        <div class="banner-section__slider">
+          <a class="banner-section__slider-item" href="#">
+            <img class="banner-section__slider-img" src="images/banner-slider.jpg" alt="">
+          </a>
+          <a class="banner-section__slider-item" href="#">
+            <img class="banner-section__slider-img" src="images/banner-slider.jpg" alt="">
+          </a>
+          <a class="banner-section__slider-item" href="#">
+            <img class="banner-section__slider-img" src="images/banner-slider.jpg" alt="">
+          </a>
+          <a class="banner-section__slider-item" href="#">
+            <img class="banner-section__slider-img" src="images/banner-slider.jpg" alt="">
+          </a>
+          <a class="banner-section__slider-item" href="#">
+            <img class="banner-section__slider-img" src="images/banner-slider.jpg" alt="">
+          </a>
+        </div>
+        <a class="banner-section__item sale-item" href="#">
+          <div class="sale-item__top">
+            <p class="sale-item__info">
+              SALE
+            </p>
+            <div class="sale-item__price">
+              <div class="price sale-item__price-new"> $2499</div>
+              <div class="price sale-item__price-old">$2799</div>
+            </div>
+          </div>
+          <img src="images/content/sale-1.png" alt="" class="sale-item__img">
+          <h5 class="sale-item__title">
+            Boat engine Suzuki DF9.9BRS
+          </h5>
+          <div class="sale-item__footer">
+            Sale ends on
+            <span>31.08.2020</span>
+          </div>
+        </a>
+      </div>
+    </div>
+  </section>
 
+  <div class="search page-section">
+    <div class="container">
+      <div class="search__inner">
+        <div class="search__tabs tabs-wrapper">
+          <div class="mobile-overflow">
+            <a href="#tab-1" class="tab search__tabs-item tab--active">Search by Item No</a>
+            <a href="#tab-2" class="tab search__tabs-item">Search by Manufacturer</a>
+            <a href="#tab-3" class="tab search__tabs-item">Search by Item name</a>
+          </div>
+        </div>
+        <div class="search__content">
+          <div id="tab-1" class="tabs-content search__content-item tabs-content--active">
+            <form class="search__content-form">
+              <input class="search__content-input" type="text" placeholder="Enter Item No">
+              <button class="search__content-btn" type="submit">искать</button>
+            </form>
+          </div>
+          <div id="tab-2" class="tabs-content search__content-item">
+            <form class="search__content-form">
+              <input class="search__content-input" type="text" placeholder="Enter Manufacturer">
+              <button class="search__content-btn" type="submit">искать</button>
+            </form>
+          </div>
+          <div id="tab-3" class="tabs-content search__content-item">
+            <form class="search__content-form">
+              <input class="search__content-input" type="text" placeholder="Enter Item Name">
+              <button class="search__content-btn" type="submit">искать</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <section class="categories">
+    <div class="container">
+      <div class="categories__inner">
+        <a class="categories__item" href="">
+          <div class="categories__item-info">
+            <h4 class="categories__item-title">Quad bikes</h4>
+            <p class="categories__item-text">More...</p>
+          </div>
+          <div class="categories__item-img">
+            <img src="images/categories-01.png" alt="">
+          </div>
+        </a>
+        <a class="categories__item" href="">
+          <div class="categories__item-info">
+            <h4 class="categories__item-title">Jetskis</h4>
+            <p class="categories__item-text">More...</p>
+          </div>
+          <div class="categories__item-img">
+            <img src="images/categories-02.png" alt="">
+          </div>
+        </a>
+        <a class="categories__item" href="">
+          <div class="categories__item-info">
+            <h4 class="categories__item-title">Jetboats</h4>
+            <p class="categories__item-text">More...</p>
+          </div>
+          <div class="categories__item-img">
+            <img src="images/categories-03.png" alt="">
+          </div>
+        </a>
+        <a class="categories__item" href="">
+          <div class="categories__item-info">
+            <h4 class="categories__item-title">Snowmobiles</h4>
+            <p class="categories__item-text">More...</p>
+          </div>
+          <div class="categories__item-img">
+            <img src="images/categories-04.png" alt="">
+          </div>
+        </a>
+        <a class="categories__item" href="">
+          <div class="categories__item-info">
+            <h4 class="categories__item-title">Off-roaders</h4>
+            <p class="categories__item-text">More...</p>
+          </div>
+          <div class="categories__item-img">
+            <img src="images/categories-05.png" alt="">
+          </div>
+        </a>
+        <a class="categories__item" href="">
+          <div class="categories__item-info">
+            <h4 class="categories__item-title">Engines</h4>
+            <p class="categories__item-text">More...</p>
+          </div>
+          <div class="categories__item-img">
+            <img src="images/categories-06.png" alt="">
+          </div>
+        </a>
+      </div>
+    </div>
+  </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
