added content for catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -246,7 +246,7 @@
         </div>
         <div class="catalog__filter-btn">
           <select class="filter-style select-item">
-            <option value="">By popularity</option>
+            <option value="">Popularity</option>
             <option value="">Option 2</option>
             <option value="">Option 3</option>
           </select>
@@ -543,9 +543,9 @@
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
+              <img src="images/content/jetski-02.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
-                Jetski BRP SeaDoo GTI 130hp SE Black\Mango
+                JetskiBRP SeaDoo GTI 155hp SE Long Blue Metallic
               </h4>
               <p class="price product-item__price">
                 $13999
@@ -565,19 +565,19 @@
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
+              <img src="images/content/jetski-03.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
-                Jetski BRP SeaDoo GTI 130hp SE Black\Mango
+                Jetski BRP SeaDoo GTR 230hp X California green
               </h4>
               <p class="price product-item__price">
-                $13999
+                $15999
               </p>
               <p class="product-item__notify-text">
                 Not available
               </p>
             </a>
           </div><!-- .product-item__wrapper -->
-          <div class="product-item__wrapper">
+          <div class="product-item__wrapper product-item__not-available">
             <button class="product-item__favorite"></button>
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
@@ -587,12 +587,12 @@
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
+              <img src="images/content/jetski-04.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
-                Jetski BRP SeaDoo GTI 130hp SE Black\Mango
+                Jetski BRP  SeaDoo GTR 230hp STD Black
               </h4>
               <p class="price product-item__price">
-                $13999
+                $11289
               </p>
               <p class="product-item__notify-text">
                 Not available
@@ -609,12 +609,12 @@
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
+              <img src="images/content/jetski-05.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
-                Jetski BRP SeaDoo GTI 130hp SE Black\Mango
+                Jetski BRP SeaDoo GTX 300hp LTD Liquid Metal
               </h4>
               <p class="price product-item__price">
-                $13999
+                $10499
               </p>
               <p class="product-item__notify-text">
                 Not available
@@ -631,12 +631,12 @@
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
+              <img src="images/content/jetski-06.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
-                Jetski BRP SeaDoo GTI 130hp SE Black\Mango
+                Jetski BRP SeaDoo Spark 60hp 2 up
               </h4>
               <p class="price product-item__price">
-                $13999
+                $14799
               </p>
               <p class="product-item__notify-text">
                 Not available
@@ -653,12 +653,12 @@
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
+              <img src="images/content/jetski-07.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
-                Jetski BRP SeaDoo GTI 130hp SE Black\Mango
+                Jetski BRP SeaDoo Spark GTS 90hp Rental
               </h4>
               <p class="price product-item__price">
-                $13999
+                $118399
               </p>
               <p class="product-item__notify-text">
                 Not available
@@ -675,12 +675,12 @@
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
+              <img src="images/content/jetski-08.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
-                Jetski BRP SeaDoo GTI 130hp SE Black\Mango
+                Jetski BRP SeaDoo WAKE 230hp PRO Teal blue
               </h4>
               <p class="price product-item__price">
-                $13999
+                $11289
               </p>
               <p class="product-item__notify-text">
                 Not available
@@ -697,12 +697,12 @@
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
+              <img src="images/content/jetski-09.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
-                Jetski BRP SeaDoo GTI 130hp SE Black\Mango
+                Jetski Spark 2-UP 900 Ho Ace Chili Pepper
               </h4>
               <p class="price product-item__price">
-                $13999
+                $11419
               </p>
               <p class="product-item__notify-text">
                 Not available
@@ -719,19 +719,19 @@
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
+              <img src="images/content/jetski-10.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
-                Jetski BRP SeaDoo GTI 130hp SE Black\Mango
+                Jetski Spark 2-UP 900 Ho Ace Pineapple
               </h4>
               <p class="price product-item__price">
-                $13999
+                $15999
               </p>
               <p class="product-item__notify-text">
                 Not available
               </p>
             </a>
           </div><!-- .product-item__wrapper -->
-          <div class="product-item__wrapper">
+          <div class="product-item__wrapper  product-item__not-available">
             <button class="product-item__favorite"></button>
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
@@ -741,19 +741,19 @@
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
+              <img src="images/content/jetski-11.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
-                Jetski BRP SeaDoo GTI 130hp SE Black\Mango
+                Jetski BRP Sea-doo Spark 2-UP 900 Ace Vanilla
               </h4>
               <p class="price product-item__price">
-                $13999
+                $11499
               </p>
               <p class="product-item__notify-text">
                 Not available
               </p>
             </a>
           </div><!-- .product-item__wrapper -->
-          <div class="product-item__wrapper">
+          <div class="product-item__wrapper  product-item__not-available">
             <button class="product-item__favorite"></button>
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
@@ -763,12 +763,12 @@
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
+              <img src="images/content/jetski-12.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
-                Jetski BRP SeaDoo GTI 130hp SE Black\Mango
+                Jetski Spark 3-UP 900 HO Ace IBR Blueberry
               </h4>
               <p class="price product-item__price">
-                $13999
+                $18399
               </p>
               <p class="product-item__notify-text">
                 Not available
